--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <div class="container" id="initialButton">
       <div class="row">
+        <h2>Make sure to use landscape mode for maximum holiday spirit!</h2>
         <button
           id="initializeInteraction"
           style="margin-left: auto; margin-right: auto; margin-top: 3em"
@@ -73,7 +74,6 @@
         $("#initialButton").show();
         $("#unmuteButton").hide();
         $("#afterPlayback").hide();
-        alert("Use landscape mode for the most holiday spirit!");
       });
 
       function playbackComplete() {
