--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-xs-1 text-center" style="margin-top: 4em">
           <h1>Happy Holidays from Morgan and Jen!</h1>
-          <img src="./media/406500989_10168707370045691_6091406763918635230_n.png" style="width: fit-content;"/>
+          <img src="./media/406500989_10168707370045691_6091406763918635230_n.png" style="width: 50%;"/>
         </div>
       </div>
     </div>
@@ -74,7 +74,6 @@
 
       $(function () {
         if (checkCookie() === true) {
-            alert('Cookie is set.');
             $("#video").hide();
             $("#initialButton").hide();
             $("#unmuteButton").hide();
