--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       </div>
     </div>
 
-    <video id="video" autoplay style="width: 100%" playsinline muted>
+    <video id="video" autoplay style="width: 100%; height: 100%;" playsinline muted>
       <source src="./media/Virus_Card_Video01.mp4" />
+      <p>Your browser does not support video playback.</p>
     </video>
     <button id="unmuteButton"></button>
 
