--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <video id="video" autoplay style="width: 100%; height: 100%;" playsinline muted>
+    <video id="video" autoplay style="height: 100%" playsinline muted>
       <source src="./media/Virus_Card_Video01.mp4" />
       <p>Your browser does not support video playback.</p>
     </video>
@@ -39,9 +39,12 @@
 
     <div class="container" id="afterPlayback">
       <div class="row">
-        <div class="col-xs-1 text-center" style="margin-top: 4em">
+        <div class="col-xs-1 text-center" style="margin-top: 2em">
           <h1>Happy Holidays from Morgan and Jen!</h1>
-          <img src="./media/406500989_10168707370045691_6091406763918635230_n.png" style="width: 50%;"/>
+          <img
+            src="./media/406500989_10168707370045691_6091406763918635230_n.png"
+            style="width: 50%; max-height: 100%;"
+          />
         </div>
       </div>
     </div>
@@ -75,15 +78,15 @@
 
       $(function () {
         if (checkCookie() === true) {
-            $("#video").hide();
-            $("#initialButton").hide();
-            $("#unmuteButton").hide();
-            $("#afterPlayback").show();
+          $("#video").hide();
+          $("#initialButton").hide();
+          $("#unmuteButton").hide();
+          $("#afterPlayback").show();
         } else {
-            $("#video").hide();
-            $("#initialButton").show();
-            $("#unmuteButton").hide();
-            $("#afterPlayback").hide();
+          $("#video").hide();
+          $("#initialButton").show();
+          $("#unmuteButton").hide();
+          $("#afterPlayback").hide();
         }
       });
 
@@ -111,7 +114,7 @@
       function checkCookie() {
         let check = getCookie("holiday_greeting_shown");
         if (check != "") {
-            return true;
+          return true;
         }
         return false;
       }
