--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="container" id="afterPlayback">
       <div class="row">
         <div class="col-xs-1 text-center" style="margin-top: 2em">
-          <h1>Happy Holidays from Morgan and Jen!</h1>
+          <h1>Happy Holidays for 2023 from Morgan and Jen!</h1>
           <img
             src="./media/406500989_10168707370045691_6091406763918635230_n.png"
-            style="width: 50%; max-height: 100%;"
+            style="max-width: 50%; max-height: 50%"
           />
         </div>
       </div>
