--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <video id="video" autoplay style="height: 100%" playsinline muted>
+    <video id="video" autoplay style="width: 100vh; height: 100vh; min-height: 100%; max-height: 100%;" playsinline muted>
       <source src="./media/Virus_Card_Video01.mp4" />
       <p>Your browser does not support video playback.</p>
     </video>
