--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             style="margin-left: auto; margin-right: auto; margin-top: 3em; width: 75%;"
             class="btn btn-primary"
           >
-            Click for your personalized holiday greeting!
+            Click for your personalized holiday greeting<br />
+            from Morgan & Jen!
           </button>
     </div>
 
